[gd_scene load_steps=8 format=3 uid="uid://dvt6qe6l6wyes"]

[ext_resource type="Theme" uid="uid://w2bb4ys7ou6x" path="res://font_theme.tres" id="1_7kewb"]
[ext_resource type="Script" path="res://current_word.gd" id="1_dt1dd"]
[ext_resource type="FontFile" uid="uid://bjlwny0d2bgnw" path="res://Abaddon Bold.ttf" id="2_1fs3p"]
[ext_resource type="AudioStream" uid="uid://cf6mhby8ppron" path="res://sounds/write.wav" id="4_fgq11"]
[ext_resource type="AudioStream" uid="uid://cldepi0ivhnsc" path="res://sounds/write2.wav" id="5_3qvv2"]
[ext_resource type="AudioStream" uid="uid://dsafx44e86le7" path="res://sounds/write3.wav" id="6_vcvqs"]
[ext_resource type="AudioStream" uid="uid://bw0n5441f6wls" path="res://sounds/write4.wav" id="7_ylnsc"]

[node name="CurrentWord" type="Label"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -503.0
offset_bottom = -503.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7kewb")
theme_override_fonts/font = ExtResource("2_1fs3p")
theme_override_font_sizes/font_size = 128
text = "_________"
script = ExtResource("1_dt1dd")

[node name="Type1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fgq11")

[node name="Type2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3qvv2")

[node name="Type3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vcvqs")

[node name="Type4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ylnsc")
